# EuoraCraftLauncher

./: .gitignore  CHANGELOG.md  EuoraCraft Launcher.spec  README.md  main.py  pyproject.toml  requirements.txt
ECL/: __init__.py  config.py  launcher.py  logger.py
ECL/Core/: C_Downloader.py  C_FilesChecker.py  C_GetGames.py  C_Libs.py  ECLauncherCore.py  __init__.py
ECL/game/: java.py
ECL/ui/: ui.py
