[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EuoraCraft-Launcher"
version = "0.0.1"
description = "EuoraCraft Launcher"
authors = [
    {name = "EuoraCraft Team", email = "your.email@example.com"},
]
dependencies = [
    # Add your dependencies here
]
requires-python = ">=3.10"

[project.scripts]
euoracraft-launcher = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ECL*", "ui*"]